--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@
 
 @import "tailwindcss";
 @plugin "daisyui";
+
+.navbar .active {
+  color: rgb(20, 83, 220);
+  font-weight: bold;
+  border: 1px solid #cac8c8ff;
+  border-radius: 20px;
+  background: rgb(35, 206, 13);
+}
