--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
 }
 
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+}
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 .navbar .active {
   color: rgb(255, 255, 255);
